# CMock

./: .gitignore  CMakeLists.txt  unity_config.h.in
cmake/: build-tree-cmock-config.cmake.in  cmock-config.cmake.in  cmock-tools.cmake.in
test/system/test_interactions/: return_thru_ptr_ignore.yml
